--- a/P007868.opf/meta.yml
+++ b/P007868.opf/meta.yml
@@ -1,16 +1,17 @@
-id: opecha:P007868
+id: P007868
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1PD36435
   title: ཡུན་ནན་བོད་ཀྱི་ཤེས་རིག་ཞིབ་འཇུག་ཆེད་རྩོམ་ཕྱོགས་བསྒྲིགས། ༢
-  volume:
+  author: ''
+  volumes:
     973856ee59a448d989c73ae9bad282e3:
       image_group_id: I1PD36457
       title: Volume 1 of yun nan bod kyi shes rig zhib 'jug ched rtsom phyogs bsgrigs/
         2
       volume_number: 1
       total_pages: 424
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: ཡུན་ནན་བོད་ཀྱི་ཤེས་རིག་ཞིབ་འཇུག་ཆེད་རྩོམ་ཕྱོགས་བསྒྲིགས། ༢
   author: ''
