volumes of meta updated

--- a/P007868.opf/meta.yml
+++ b/P007868.opf/meta.yml
@@ -5,13 +5,11 @@ source_metadata:
   title: ཡུན་ནན་བོད་ཀྱི་ཤེས་རིག་ཞིབ་འཇུག་ཆེད་རྩོམ་ཕྱོགས་བསྒྲིགས། ༢
   author: ''
   volumes:
-    973856ee59a448d989c73ae9bad282e3:
+    dad8dcd73fda4909995c6b3320f7c8df:
       image_group_id: I1PD36457
-      title: Volume 1 of yun nan bod kyi shes rig zhib 'jug ched rtsom phyogs bsgrigs/
-        2
+      title: ''
       volume_number: 1
       total_pages: 424
-      base_file: v001.txt
 ebook_metadata:
   title: ཡུན་ནན་བོད་ཀྱི་ཤེས་རིག་ཞིབ་འཇུག་ཆེད་རྩོམ་ཕྱོགས་བསྒྲིགས། ༢
   author: ''
