--- a/P007868.opf/meta.yml
+++ b/P007868.opf/meta.yml
@@ -5,11 +5,13 @@ source_metadata:
   title: ཡུན་ནན་བོད་ཀྱི་ཤེས་རིག་ཞིབ་འཇུག་ཆེད་རྩོམ་ཕྱོགས་བསྒྲིགས། ༢
   author: ''
   volumes:
-    dad8dcd73fda4909995c6b3320f7c8df:
+    973856ee59a448d989c73ae9bad282e3:
       image_group_id: I1PD36457
-      title: ''
+      title: Volume 1 of yun nan bod kyi shes rig zhib 'jug ched rtsom phyogs bsgrigs/
+        2
       volume_number: 1
       total_pages: 424
+      base_file: v001.txt
 ebook_metadata:
   title: ཡུན་ནན་བོད་ཀྱི་ཤེས་རིག་ཞིབ་འཇུག་ཆེད་རྩོམ་ཕྱོགས་བསྒྲིགས། ༢
   author: ''
