--- a/P007868.opf/layers/v001/Pagination.yml
+++ b/P007868.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 100e3fdc3c624c339966dc79e6e2d010
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   acad1eb1aa9f46638640ca2d8492a063:
