added created_at and last_modified_at in metadata

--- a/P007868.opf/meta.yml
+++ b/P007868.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P007868
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1PD36435
   title: ཡུན་ནན་བོད་ཀྱི་ཤེས་རིག་ཞིབ་འཇུག་ཆེད་རྩོམ་ཕྱོགས་བསྒྲིགས། ༢
@@ -12,10 +14,3 @@ source_metadata:
       volume_number: 1
       total_pages: 424
       base_file: v001.txt
-ebook_metadata:
-  title: ཡུན་ནན་བོད་ཀྱི་ཤེས་རིག་ཞིབ་འཇུག་ཆེད་རྩོམ་ཕྱོགས་བསྒྲིགས། ༢
-  author: ''
-  sku: P007868
-  cover: cover.jpg
-  layers:
-  - pagination
